# neiro

./: .gitignore  Cargo.toml  LICENSE.md  README.md
README/: README-en.md
src/: main.rs
src/core/: player.rs
src/interactive/: app.rs  interactiveplayer.rs  mod.rs  ratatui.rs  run.rs
src/terminal/: mod.rs  terminalplayer.rs
