[package]
name = "Neiro"
version = "0.2.0"
edition = "2024"
description = "Simple Audio File Player in Terminal"
authors = ["IKATA゚ <>"]
license = "MIT"
repository = "https://github.com/c0b23092db/neiro"

[[bin]]
name = "sap"
path = "src/main.rs"

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
strip = "symbols"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
rodio = "0.21.1"
smol = "2.0.2"
anyhow = "1.0.98"
