[package]
name = "Neiro"
version = "0.2.1"
edition = "2024"
description = "Simple Audio File Player in Terminal"
categories = ["command-line-utilities","multimedia::audio"]
authors = ["IKATA゚ <>"]
license = "MIT"
repository = "https://github.com/c0b23092db/neiro"

[[bin]]
name = "sap"
path = "src/main.rs"

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
strip = "symbols"

[dependencies]
# エラー処理
anyhow = "1.0"
# 並列処理
smol = "2.0.2"
# 引数
clap = { version = "4.5.41", features = ["derive"] }
# 音声処理
rodio = "0.21.1"
# TUI
crossterm = "0.29.0"
ratatui = "0.29.0"
